marcas de codificacion, focus en el campo de usuario al hacer

--- a/comicagg/templates/base/welcome.html
+++ b/comicagg/templates/base/welcome.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}
-{% trans "Welcome" %}
-{% endblock %}
+{% block title %}{% trans "Welcome" %}{% endblock %}
+{% block onload %}focusOnLogin(){% endblock %}
 {% block content %}
 <div>
   <div id="login">
