modo de mantenimiento (con pagina de error y mensaje en la plantilla cuando es un admin logueado) imagenes en paginas de error

--- a/comicagg/templates/base/base.html
+++ b/comicagg/templates/base/base.html
@@ -65,6 +65,7 @@
     {% endif %}
     </div>
     <div id="content">
+		{% if settings.MAINTENANCE and user.is_superuser %}<b style="color:red">EN MANTENIMIENTO</b>{% endif %}
       <div id="content_wrap">
 {% block content %}
 {% endblock %}
