--- a/comicagg/templates/base/404.html
+++ b/comicagg/templates/base/404.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% block title %}404{% endblock %}
 {% block content %}
-<code>404 - Not Found</code>
-<p>{% trans "I can't find what you are looking for."%}</p>
+<br/><code>404 - {% trans "Not Found" %}</code>
+<center><img src="{{ mediaurl }}images/errores_http.png" alt="error img" />
+<p>{% trans "I can't find what you are looking for."%}</p></center>
 {% endblock %}
