--- a/comicagg/templates/base/500.html
+++ b/comicagg/templates/base/500.html
@@ -2,6 +2,7 @@
 {% load i18n %}
 {% block title %}500{% endblock %}
 {% block content %}
-<code>500 - Server error</code>
-<p>{% trans "It seems that server is having problems. Try again in a few minutes."%}</p>
+<br/><code>500 - {% trans "Server error" %}</code>
+<center><img src="{{ mediaurl }}images/errores_http.png" alt="error img" />
+<p>{% trans "It seems that server is having issues. Try again in a few minutes."%}</p></center>
 {% endblock %}
