--- a/comicagg/templates/base/agregator/read_random.html
+++ b/comicagg/templates/base/agregator/read_random.html
@@ -3,7 +3,7 @@
               <h3><a href="{{ random_comic.comic.website }}">{{ random_comic.comic.name }}</a></h3>
               <img src="{{ settings.MEDIA_URL }}images/loading.gif" alt="[img {{ random_comic.comic.name }}]" id="img_random"/>
               <script type="text/javascript">
-                url_random = '{% if random_comic.comic.referer %}/ref.php?url={{ random_comic.url|urlencode }}&amp;ref={{ random_comic.comic.referer|urlencode }}{% else %}{{ random_comic.url }}{% endif %}';
+                url_random = '{{ random_comic.get_url|safe }}';
                 tmp_random = new Image();
                 loadimg('img_random', tmp_random, url_random);
               </script>
