importando patch con recarga de imagenes

--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -313,6 +313,10 @@ div.comic {
 /*	 text-align:right; */
 }
 
+.opts_left_error {
+/*	 text-align:right; */
+}
+
 .opts_right {
 	position:absolute;
 	right:2px;
