--- a/comicagg/templates/base/base.html
+++ b/comicagg/templates/base/base.html
@@ -5,18 +5,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>{{ settings.SITE_NAME }} - {% block title %}{% endblock %}</title>
-<!--     <link href="{{ settings.MEDIA_URL }}style.css" type="text/css" rel="stylesheet"/> -->
-    <link rel="shortcut icon" href="{{ settings.MEDIA_URL }}images/favicon.png" type="image/png" />
+<!--     <link href="{{ mediaurl }}style.css" type="text/css" rel="stylesheet"/> -->
+    <link rel="shortcut icon" href="{{ mediaurl }}images/favicon.png" type="image/png" />
 
-    <link href="{{ settings.MEDIA_URL }}css/green_white.css" type="text/css" rel="stylesheet"/>
-    <link href="{{ settings.MEDIA_URL }}css/gray_white.css" type="text/css" rel="stylesheet"/>
-    <link href="{{ settings.MEDIA_URL }}css/red_white.css" type="text/css" rel="stylesheet"/>
-    <link href="{{ settings.MEDIA_URL }}css/blue_white.css" type="text/css" rel="stylesheet"/>
-    {% if user.id %}<link href="{{ settings.MEDIA_URL }}css/{{ user.get_profile.css_color }}.css" type="text/css" rel="stylesheet" id="css_file"/>{% endif %}
-    <link href="{{ settings.MEDIA_URL }}css/base.css" type="text/css" rel="stylesheet"/>
-    <script src="{{ settings.MEDIA_URL }}js/lib/prototype.js" type="text/javascript"></script>
-    <script src="{{ settings.MEDIA_URL }}js/lib/scriptaculous.js" type="text/javascript"></script>
-    <script src="{{ settings.MEDIA_URL }}js/functions.js" type="text/javascript"></script>
+    <link href="{{ mediaurl }}css/green_white.css" type="text/css" rel="stylesheet"/>
+    <link href="{{ mediaurl }}css/gray_white.css" type="text/css" rel="stylesheet"/>
+    <link href="{{ mediaurl }}css/red_white.css" type="text/css" rel="stylesheet"/>
+    <link href="{{ mediaurl }}css/blue_white.css" type="text/css" rel="stylesheet"/>
+    {% if user.id %}<link href="{{ mediaurl }}css/{{ user.get_profile.css_color }}.css" type="text/css" rel="stylesheet" id="css_file"/>{% endif %}
+    <link href="{{ mediaurl }}css/base.css" type="text/css" rel="stylesheet"/>
+    <script src="{{ mediaurl }}js/lib/prototype.js" type="text/javascript"></script>
+    <script src="{{ mediaurl }}js/lib/scriptaculous.js" type="text/javascript"></script>
+    <script src="{{ mediaurl }}js/functions.js" type="text/javascript"></script>
 <!--     <script src="http://www.savethedevelopers.org/say.no.to.ie.6.js" type="text/javascript"></script> -->
     <script type="text/javascript">
     var url_hide_new_comics = '{% url hide_new_comics %}';
@@ -27,16 +27,17 @@
     var url_save_tags = '{% url save_tags %}';
     var url_configure = '{% url configure %}';
     var url_save_selection = '{% url save_selection %}';
-    var url_error = '{{ settings.MEDIA_URL }}images/error.png';
+    var url_error = '{{ mediaurl }}images/error.png';
+    var url_loading = '{{ mediaurl }}images/loading.gif';
     var url_add = '{% url add_comic_ajax %}';
     var url_remove = '{% url remove_comic_ajax %}';
     var url_report = '{% url report_comic %}';
     var url_comic_list = '{% url comic_list %}';
-    var media_url = '{{ settings.MEDIA_URL }}';
-    var css_blue_white = '{{ settings.MEDIA_URL }}css/blue_white.css';
-    var css_green_white = '{{ settings.MEDIA_URL }}css/green_white.css';
-    var css_gray_white = '{{ settings.MEDIA_URL }}css/gray_white.css';
-    var css_red_white = '{{ settings.MEDIA_URL }}css/red_white.css';
+    var media_url = '{{ mediaurl }}';
+    var css_blue_white = '{{ mediaurl }}css/blue_white.css';
+    var css_green_white = '{{ mediaurl }}css/green_white.css';
+    var css_gray_white = '{{ mediaurl }}css/gray_white.css';
+    var css_red_white = '{{ mediaurl }}css/red_white.css';
     var url_save_color = '{% url save_color %}';
     </script>
 {% block head %}{% endblock %}
@@ -44,7 +45,7 @@
   </head>
   <body onload="{% block onload %}{% endblock %}" onclick="{% block onclick %}false{% endblock %}">
     <div id="head">
-      <a href="{% url index %}"><img src="{{ settings.MEDIA_URL }}images/banner.png" alt="" /></a>
+      <a href="{% url index %}"><img src="{{ mediaurl }}images/banner.png" alt="" /></a>
       <ul id="menu">
       {% if user.is_authenticated %}
         <li><span class="logged_in">{% trans 'Logged in as '%}<i><b>{{ user.username }}</b></i></span></li>
