--- a/comicagg/templates/base/base.html
+++ b/comicagg/templates/base/base.html
@@ -22,7 +22,8 @@
     var url_hide_new_comics = '{% url hide_new_comics %}';
     var url_hide_new_blogs = '{% url hide_new_blogs %}';
     var url_forget_new_blogs = '{% url forget_new_blogs %}';
-    var url_rate = '{% url rate %}';
+	 var url_forget_new_comics = '{% url forget_new_comics %}';
+	 var url_rate = '{% url rate %}';
     var url_mark_as_read = '{% url mark_read %}';
     var url_save_tags = '{% url save_tags %}';
     var url_configure = '{% url configure %}';
