--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -485,7 +485,7 @@ div.sortable_box .menu li:hover {
 	cursor:pointer;
 }
 
-.new_comics_box {
+#new_comics_box {
 	text-align:left;
 	margin:5px;
 	margin-top:10px;
