--- a/comicagg/media/css/red_white.css
+++ b/comicagg/media/css/red_white.css
@@ -228,6 +228,10 @@ div.sortable_box .menu li:hover {
   background:#bbb;
 }
 
+div.sortable_box .menu li a, div.sortable_box .menu li a:hover {
+  color:#444;
+}
+
 #new_comics_box {
   border:1px solid #eee;
 }
