--- a/comicagg/templates/base/agregator/configure.html
+++ b/comicagg/templates/base/agregator/configure.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load i18n agregator_tags %}
 {% block title %}{% trans 'Choose comics'%}{% endblock %}
-{% block head %}<script src="{{ settings.MEDIA_URL }}js/configure.js" type="text/javascript"></script>{% endblock %}
+{% block head %}<script src="{{ mediaurl }}js/configure.js" type="text/javascript"></script>{% endblock %}
 {% block onload %}initConfigure(){% endblock %}
 {% block onclick %}processClick(){% endblock %}
 {% block content %}
@@ -17,31 +17,31 @@
 {% endfor %}
     </div>
   </div>
-<div id="sortables_loading"><br/>{% trans "Loading the lists..." %}<br/><img src="{{ settings.MEDIA_URL }}images/loading.gif" alt="" /></div>
+<div id="sortables_loading"><br/>{% trans "Loading the lists..." %}<br/><img src="{{ mediaurl }}images/loading.gif" alt="" /></div>
 <div id="sortables_wrap" style="display:none;">
 {% if new_comics %}
-  <div id="new_comics_box"><img src="{{ settings.MEDIA_URL}}images/info2.png" alt=""/> {% trans "You have "%}<span id="new_comics_count">{{ new_comics.count|default:0 }}</span>{% trans " new comics. "%}<a href="{% url forget_new_comics %}">{% trans "Forget new comics." %}</a><br/><a id="show_new">{% trans "Show only new comics" %}</a></div>
+  <div id="new_comics_box"><img src="{{ mediaurl}}images/info2.png" alt=""/> {% trans "You have "%}<span id="new_comics_count">{{ new_comics.count|default:0 }}</span>{% trans " new comics. "%}<a href="{% url forget_new_comics %}">{% trans "Forget new comics." %}</a><br/><a id="show_new">{% trans "Show only new comics" %}</a></div>
 {% endif %}
 <table class="table_wrap">
 <tr>
 <td>
     <h4>{% trans 'Available strips'%}{% if tag %} ({% trans 'tag: '%}{{ tag }})<br/><a href="{% url configure %}">{% trans 'View all'%}</a>{% endif %}</h4>
-    {% trans 'Filter: '%}<span class="input filter_wrapper"><input id="filter_input_available" type="text" size="25" class="filter_input"/><a id="clear_available"><img src="{{ settings.MEDIA_URL }}images/clear.png" alt="" /></a></span>
+    {% trans 'Filter: '%}<span class="input filter_wrapper"><input id="filter_input_available" type="text" size="25" class="filter_input"/><a id="clear_available"><img src="{{ mediaurl }}images/clear.png" alt="" /></a></span>
 </td>
 <td>
     <h4>{% trans 'Selected strips '%}</h4>
-    {% trans 'Filter: '%}<span class="input filter_wrapper"><input id="filter_input_selected" type="text" size="25" class="filter_input"/><a id="clear_selected"><img src="{{ settings.MEDIA_URL }}images/clear.png" alt="" /></a></span>
+    {% trans 'Filter: '%}<span class="input filter_wrapper"><input id="filter_input_selected" type="text" size="25" class="filter_input"/><a id="clear_selected"><img src="{{ mediaurl }}images/clear.png" alt="" /></a></span>
 </td>
 <td class="extra_actions" rowspan="2">
   <h4>{% trans "Extra actions"%}</h4>
-  <span id="working" style="display:none" class="small_text"><img id="loading_img" src="{{ settings.MEDIA_URL }}images/loading.gif" alt=""/> {% trans "Working..." %}</span><span id="saved" class="small_text"></span><br/><br/>
-  <a id="sort_az"><img src="{{ settings.MEDIA_URL}}images/update.png" alt="update" /> {% trans 'Sort selected by name'%}</a><br/>
-  <a id="sort_rating"><img src="{{ settings.MEDIA_URL}}images/update.png" alt="update" /> {% trans 'Sort selected by user rating'%}</a><br/>
+  <span id="working" style="display:none" class="small_text"><img id="loading_img" src="{{ mediaurl }}images/loading.gif" alt=""/> {% trans "Working..." %}</span><span id="saved" class="small_text"></span><br/><br/>
+  <a id="sort_az"><img src="{{ mediaurl}}images/update.png" alt="update" /> {% trans 'Sort selected by name'%}</a><br/>
+  <a id="sort_rating"><img src="{{ mediaurl}}images/update.png" alt="update" /> {% trans 'Sort selected by user rating'%}</a><br/>
   <br/>
-  <a id="add_all"><img src="{{ settings.MEDIA_URL}}images/2rightarrow.png" alt="add_all" /> {% trans 'Add all'%}</a><br/>
-  <a id="remove_all"><img src="{{ settings.MEDIA_URL}}images/2leftarrow.png" alt="remove_all" /> {% trans 'Remove all'%}</a><br/>
+  <a id="add_all"><img src="{{ mediaurl}}images/2rightarrow.png" alt="add_all" /> {% trans 'Add all'%}</a><br/>
+  <a id="remove_all"><img src="{{ mediaurl}}images/2leftarrow.png" alt="remove_all" /> {% trans 'Remove all'%}</a><br/>
   <br/>
-  <a id="sort_available"><img src="{{ settings.MEDIA_URL}}images/update.png" alt="update" /> {% trans 'Reorder available list'%}</a><br/>
+  <a id="sort_available"><img src="{{ mediaurl}}images/update.png" alt="update" /> {% trans 'Reorder available list'%}</a><br/>
   <br /><br /><br />
 </td>
 </tr>
@@ -52,48 +52,50 @@
 {% for comic in available %}
 {% is_new_for_user comic user as is_new %}
 			<li id="comic_{{ comic.id }}" class="item" onmouseover="Element.show('info{{ comic.id }}')" onmouseout="infoHide({{ comic.id }})">
-			{% is_new comic user %}{{ comic.name }}&nbsp;<span class="small_text">({{ comic.get_rating }}%, {{ comic.votes }}v)</span>
-			<span class="rating">{{ comic.get_rating }}</span>
-			<span class="votes">{{ comic.votes }}</span>
-			<span class="name">{{ comic.name|slugify }}</span>
-			<div id="info{{ comic.id }}" class="comic_info" style="display:none">
-				<img id="menu_image{{ comic.id }}" src="{{ settings.MEDIA_URL}}images/configure.png" alt="[c]" />
-			</div>
-			<ul id="menu{{ comic.id }}" class="menu" style="display:none">
-				<li class="add">{% trans "Add to my list" %}&nbsp;<img class="add_img" src="{{ settings.MEDIA_URL }}images/add12.png" alt=""/></li>
-				<li class="remove" style="display:none">{% trans "Remove from list" %}&nbsp;<img class="remove_img" src="{{ settings.MEDIA_URL }}images/remove12.png" alt=""/></li>
-				{% if is_new %}<li class="forget">{% trans "Forget this comic" %}&nbsp;<img class="forget_img" src="{{ settings.MEDIA_URL }}images/info12.png" alt=""/></li>{% endif %}
-				<li class="desc">{% trans "Go to description" %}&nbsp;<img class="desc_img" src="{{ settings.MEDIA_URL }}images/info212.png" alt=""/></li>
-			</ul>
+				{% is_new comic user %}{{ comic.name }}&nbsp;<span class="small_text">({{ comic.get_rating }}%, {{ comic.votes }}v)</span>
+				<span class="rating">{{ comic.get_rating }}</span>
+				<span class="votes">{{ comic.votes }}</span>
+				<span class="name">{{ comic.name|slugify }}</span>
+				<div id="info{{ comic.id }}" class="comic_info" style="display:none">
+					<img id="menu_image{{ comic.id }}" src="{{ mediaurl}}images/configure.png" alt="[c]" />
+				</div>
+				<ul id="menu{{ comic.id }}" class="menu" style="display:none">
+					<li class="add">{% trans "Add to my list" %}&nbsp;<img class="add_img" src="{{ mediaurl }}images/add12.png" alt=""/></li>
+					<li class="remove" style="display:none">{% trans "Remove from list" %}&nbsp;<img class="remove_img" src="{{ mediaurl }}images/remove12.png" alt=""/></li>
+					{% if is_new %}<li class="forget">{% trans "Forget this comic" %}&nbsp;<img class="forget_img" src="{{ mediaurl }}images/info12.png" alt=""/></li>{% endif %}
+					<li class="web"><a onclick="abrirWeb('{{ comic.website|safe }}')">{% trans "Go to comic's website" %}&nbsp;<img class="web_img" src="{{ mediaurl }}images/homepage12.png" alt=""/></a></li>
+					<li class="desc">{% trans "Go to description" %}&nbsp;<img class="desc_img" src="{{ mediaurl }}images/info212.png" alt=""/></li>
+				</ul>
 			</li>
 {% endfor %}
 		</ul>
 	</div>
 </td>
 <td>
-  <div class="sortable_box green">
-    <ul id="selected_list" class="list">
-      <li id="drag_drop" {% if user.subscription_set.all %}style="display:none"{% endif %}>{% trans "Drag and drop a comic here" %}</li>
+	<div class="sortable_box green">
+		<ul id="selected_list" class="list">
+			<li id="drag_drop" {% if user.subscription_set.all %}style="display:none"{% endif %}>{% trans "Drag and drop a comic here" %}</li>
 {% for sub in user.subscription_set.all %}
 {% with sub.comic as comic %}
-      <li id="comic_{{ comic.id }}" class="item" onmouseover="Element.show('info{{ comic.id }}')" onmouseout="infoHide({{ comic.id }})">
-        {{ comic.name }}&nbsp;<span class="small_text">({{ comic.get_rating }}%, {{ comic.votes }}v)</span>
-        <span class="rating">{{ comic.get_rating }}</span>
-        <span class="votes">{{ comic.votes }}</span>
-        <span class="name">{{ comic.name|slugify }}</span>
-        <div id="info{{ comic.id }}" class="comic_info" style="display:none">
-          <img id="menu_image{{ comic.id }}" src="{{ settings.MEDIA_URL}}images/configure.png" alt="[c]" />
-        </div>
-        <ul id="menu{{ comic.id }}" class="menu" style="display:none">
-          <li class="add" style="display:none">{% trans "Add to my list" %}&nbsp;<img class="add_img" src="{{ settings.MEDIA_URL }}images/add12.png" alt=""/></li>
-          <li class="remove">{% trans "Remove from list" %}&nbsp;<img class="remove_img" src="{{ settings.MEDIA_URL }}images/remove12.png" alt=""/></li>
-          <li class="desc">{% trans "Go to description" %}&nbsp;<img class="desc_img" src="{{ settings.MEDIA_URL }}images/info212.png" alt=""/></li>
-        </ul>
-      </li>
+			<li id="comic_{{ comic.id }}" class="item" onmouseover="Element.show('info{{ comic.id }}')" onmouseout="infoHide({{ comic.id }})">
+				{{ comic.name }}&nbsp;<span class="small_text">({{ comic.get_rating }}%, {{ comic.votes }}v)</span>
+				<span class="rating">{{ comic.get_rating }}</span>
+				<span class="votes">{{ comic.votes }}</span>
+				<span class="name">{{ comic.name|slugify }}</span>
+				<div id="info{{ comic.id }}" class="comic_info" style="display:none">
+					<img id="menu_image{{ comic.id }}" src="{{ mediaurl}}images/configure.png" alt="[c]" />
+				</div>
+				<ul id="menu{{ comic.id }}" class="menu" style="display:none">
+					<li class="add" style="display:none">{% trans "Add to my list" %}&nbsp;<img class="add_img" src="{{ mediaurl }}images/add12.png" alt=""/></li>
+					<li class="remove">{% trans "Remove from list" %}&nbsp;<img class="remove_img" src="{{ mediaurl }}images/remove12.png" alt=""/></li>
+					<li class="web"><a onclick="abrirWeb('{{ comic.website|safe }}')">{% trans "Go to comic's website" %}&nbsp;<img class="web_img" src="{{ mediaurl }}images/homepage12.png" alt=""/></a></li>
+					<li class="desc">{% trans "Go to description" %}&nbsp;<img class="desc_img" src="{{ mediaurl }}images/info212.png" alt=""/></li>
+				</ul>
+			</li>
 {% endwith %}
 {% endfor %}
-    </ul>
-  </div>
+		</ul>
+	</div>
 </td>
 </tr>
 </table>
